# bertolingo

./: .gitignore  DEPLOY.md  README.md  bertolingo.ipynb  main.py  models.py  pyproject.toml  requirements.txt  setup_and_run.sh  train.py
docs/: DEPLOY.md
src/: __init__.py  config.py  dataset.py  inference.py
